--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,12 @@ a {
     background-color: #1F2937;
     height: 50px;
 
-    border: 5px solid lightskyblue;
+    padding-left: 200px;
+    padding-right: 200px;
+
+    padding-top: 20px;
+
+    /* border: 5px solid lightskyblue; */
 }
 
     .header-logo {
@@ -54,7 +59,10 @@ a {
     display: flex;
     flex-direction: column;
 
-    border: 5px solid lightgray;
+    /* padding-left: 200px;
+    padding-right: 200px; */
+
+    /* border: 5px solid lightgray; */
 
 }
 
@@ -63,25 +71,32 @@ a {
         justify-content: space-between;
 
         background-color: #1F2937;
-        padding: 50px;
+        padding-top: 50px;
+        padding-bottom: 50px;
+
+        padding-left: 240px;
+        padding-right: 240px;
 
 
-        border: 4px solid lightseagreen;
+        /* border: 4px solid lightseagreen; */
 
     }
 
         .HERO-left {
 
-            border: 2px solid red;
+            /* border: 2px solid red; */
 
         }
 
         .HERO-right {
             display: flex;
             align-items: center;
+            justify-content: center;
     
             background-color: #E5E7EB;
             padding: 30px;
+            width: 400px;
+            height: 150px;
 
         }
 
@@ -122,6 +137,11 @@ a {
         display: flex;
         flex-direction: column;
         justify-content: center;
+        gap: 0px;
+        /* width: 600px; */
+
+        padding-left: 175px;
+        padding-right: 175px;
         
 
     }
@@ -129,6 +149,7 @@ a {
     .info-sub {
         display: flex;
         justify-content: space-around;
+        align-items: center;
 
         margin: 15px;
         padding-left: 15px;
@@ -136,8 +157,10 @@ a {
         padding-top: 15px;
         padding-bottom: 15px;
 
+        gap: 25px;
 
-        border: 5px solid pink;
+
+        /* border: 5px solid pink; */
         
         
         
@@ -149,31 +172,46 @@ a {
             justify-content: center;
             align-items: center;
             
-            border: 5px solid yellow;
+            /* border: 5px solid yellow; */
 
         }
 
         
 
         .second-text {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             font-size: 24px;
-            margin: 15px;
+            margin-top: 25px;
+            color: #1F2937;
+
+            /* border: 5px solid red; */
 
         }
 
         .box {
-            border: 5px solid black;
-            width: 100px;
-            height: 100px;
+            border: 5px solid #3882F6;
+            border-radius: 25px;
+            width: 200px;
+            height: 200px;
+            margin-bottom: 15px;
+            margin-top: 0px;
 
 
 
         }
 
         .sub-text2 {
+            text-align: center;
+            padding: 10px;
+            margin-left: 15px;
+            margin-right: 15px;
+            width: 100px;
+            color: #1F2937;
             
-            border: 5px solid gray;
+            /* border: 5px solid gray; */
 
         }
 
@@ -185,8 +223,9 @@ a {
         text-align: center;
         padding-top: 50px;        
         padding-bottom: 50px;        
-        padding-left: 100px;
-        padding-right: 100px;
+        padding-left: 300px;
+        padding-right: 300px;
+
 
         
     }
@@ -202,21 +241,61 @@ a {
         }
 
     .action-call {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        padding-left: 100px;
+        padding-right: 100px;
 
 
-        border: 4px solid lightcoral;
+        /* border: 4px solid lightcoral; */
         
     }
 
         .action-call-box {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            background-color: #3882F6;
+            padding-top: 50px;
+            padding-bottom: 50px;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin: 50px;
+            border-radius: 10px;
+            width: 1000px;
+
+            /* border: 5px solid red; */
 
         }
+
+            .ac-text {
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                color: #F9FAF8;
+                text-align: left;
+
+                /* border: 5px solid red;             */
+            }
+
+            .ac-button {
+                display: flex;
+                flex-wrap: nowrap;
+                justify-content: center;
+                align-items: center;
+                border: 2px solid #F9FAF8;
+                border-radius: 5px;
+                padding: 8px;
+                width: 100px;
+                height: 25px;
+                color: #F9FAF8;
+            }
 
         .third-text {
-
-        }
-
-        .sub-text-alt {
+            font-size: 24px;
+            padding-left: 10px;
 
         }
 
@@ -235,9 +314,13 @@ a {
     
     background-color: #1F2937;
     color:#F9FAF8;
-    padding: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 
-    border: 5px solid lightblue;
+    /* border: 5px solid lightblue; */
+
+    padding-left: 200px;
+    padding-right: 200px;
 }
 
     .sub-text-alt {
